--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -37,7 +37,7 @@ jobs:
           flutter analyze --no-fatal-infos --no-fatal-warnings --write=analysis.json || true
           echo "Raw analyze output:"
           cat analyze_output.txt || echo "analyze_output.txt is empty"
-          echo "analysis.json content:"
+          echo "analysis.json:"
           cat analysis.json || echo "analysis.json is empty or invalid"
 
       - name: Generate HTML report
@@ -63,8 +63,6 @@ jobs:
                 } else {
                   print('Invalid or empty JSON in analysis.json: $jsonString');
                 }
-              } else {
-                print('analysis.json does not exist');
               }
 
               // If no issues from JSON, parse raw analyze output
@@ -80,7 +78,7 @@ jobs:
                     final code = parts[3].trim();
                     final locationParts = location.split(':');
                     final file = locationParts[0];
-                    final lineNum = locationParts.length > 1 ? locationParts[1] : 'unknown';
+                    final lineNum = locationParts.length > 1 ? locationParts[1] : '0';
                     issues.add({
                       'severity': severity,
                       'message': message,
@@ -93,9 +91,9 @@ jobs:
               }
 
               // Count issues by severity for chart
-              final errorCount = issues.where((i) => i['severity'] == 'error').length;
-              final warningCount = issues.where((i) => i['severity'] == 'warning').length;
-              final infoCount = issues.where((i) => i['severity'] == 'info').length;
+              final errorCount = issues.where((elem) => elem['severity'] == 'error').length;
+              final warningCount = issues.where((elem) => elem['severity'] == 'warning').length;
+              final infoCount = issues.where((elem) => elem['severity'] == 'info').length;
 
               // Count lines of code and detect languages
               final libDir = Directory('lib');
@@ -155,7 +153,7 @@ jobs:
                           </tr>
                         </thead>
                         <tbody class="bg-white divide-y divide-gray-200">
-              ''' $
+              ''');
 
               if (issues.isNotEmpty) {
                 for (var issue in issues) {
