--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -21,84 +21,25 @@ jobs:
           flutter pub add intl:^0.20.2
           flutter pub get
 
-      - name: Create analysis options
-        run: |
-          echo "analyzer:" > analysis_options.yaml
-          echo "  errors:" >> analysis_options.yaml
-          echo "    argument_type_not_assignable: ignore" >> analysis_options.yaml
-          echo "    missing_assignable_selector: ignore" >> analysis_options.yaml
-          echo "    undefined_operator: ignore" >> analysis_options.yaml
-          echo "    equality_cannot_be_equality_operand: ignore" >> analysis_options.yaml
-          echo "    undefined_identifier: ignore" >> analysis_options.yaml
-
-      - name: Run Flutter analyze and capture output
-        run: |
-          flutter analyze --no-fatal-infos --no-fatal-warnings > analyze_output.txt || true
-          flutter analyze --no-fatal-infos --no-fatal-warnings --write=analysis.json || true
-          echo "Raw analyze output:"
-          cat analyze_output.txt || echo "analyze_output.txt is empty"
-          echo "analysis.json:"
-          cat analysis.json || echo "analysis.json is empty or invalid"
-
-      - name: Generate HTML report
+      - name: Generate code metrics report
         run: |
           cat << 'EOF' > generate_report.dart
-          import 'dart:convert';
           import 'dart:io';
 
           void main() {
             try {
-              // Try to parse analysis.json
-              List issues = [];
-              final jsonFile = File('analysis.json');
-              if (jsonFile.existsSync()) {
-                final jsonString = jsonFile.readAsStringSync().trim();
-                if (jsonString.isNotEmpty && jsonString.startsWith('{')) {
-                  try {
-                    final jsonData = jsonDecode(jsonString);
-                    issues = jsonData['issues'] as List? ?? [];
-                  } catch (e) {
-                    print('Failed to parse analysis.json: $e');
-                  }
-                } else {
-                  print('Invalid or empty JSON in analysis.json: $jsonString');
-                }
-              }
-
-              // If no issues from JSON, parse raw analyze output
-              if (issues.isEmpty) {
-                final rawOutput = File('analyze_output.txt').readAsStringSync();
-                final issueLines = rawOutput.split('\n').where((line) => line.contains(' • ')).toList();
-                for (var line in issueLines) {
-                  final parts = line.split(' • ');
-                  if (parts.length >= 4) {
-                    final severity = parts[0].trim().toLowerCase();
-                    final message = parts[1].trim();
-                    final location = parts[2].trim();
-                    final code = parts[3].trim();
-                    final locationParts = location.split(':');
-                    final file = locationParts[0];
-                    final lineNum = locationParts.length > 1 ? locationParts[1] : '0';
-                    issues.add({
-                      'severity': severity,
-                      'message': message,
-                      'location': {'file': file, 'startLine': lineNum},
-                      'code': code,
-                    });
-                  }
-                }
-                print('Parsed ${issues.length} issues from raw output');
-              }
-
-              // Count issues by severity for chart
-              final errorCount = issues.where((elem) => elem['severity'] == 'error').length;
-              final warningCount = issues.where((elem) => elem['severity'] == 'warning').length;
-              final infoCount = issues.where((elem) => elem['severity'] == 'info').length;
-
-              // Count lines of code and detect languages
+              // Count metrics
               final libDir = Directory('lib');
               var totalLines = 0;
+              var moduleCount = 0; // Dart files
+              var interfaceCount = 0; // Files with 'interface' or 'abstract class'
+              var classCount = 0; // Files with 'class'
+              var methodCount = 0; // Method declarations
+              var widgetCount = 0; // Widget classes
+              var packageCount = 0; // Unique imported packages
               final languages = <String, int>{};
+              final packages = <String>{};
+
               if (libDir.existsSync()) {
                 libDir.listSync(recursive: true).forEach((entity) {
                   if (entity is File && !entity.path.contains('/generated/')) {
@@ -107,9 +48,46 @@ jobs:
                     totalLines += lines;
                     final lang = extension == 'dart' ? 'Dart' : extension == 'yaml' ? 'YAML' : extension == 'json' ? 'JSON' : 'Other';
                     languages[lang] = (languages[lang] ?? 0) + lines;
+
+                    if (extension == 'dart') {
+                      moduleCount++;
+                      final content = entity.readAsStringSync();
+                      // Interfaces: 'interface' or 'abstract class'
+                      if (content.contains('interface ') || content.contains('abstract class ')) {
+                        interfaceCount++;
+                      }
+                      // Classes: 'class'
+                      if (content.contains('class ')) {
+                        classCount++;
+                      }
+                      // Widgets: Subclasses of Widget, StatelessWidget, or StatefulWidget
+                      if (content.contains('extends StatelessWidget') || 
+                          content.contains('extends StatefulWidget') || 
+                          content.contains('extends Widget')) {
+                        widgetCount++;
+                      }
+                      // Methods: Lines with method signatures
+                      content.split('\n').forEach((line) {
+                        line = line.trim();
+                        if (line.contains('(') && line.contains(')') && line.contains('{') &&
+                            !line.startsWith('class') && !line.startsWith('abstract')) {
+                          methodCount++;
+                        }
+                      });
+                      // Packages: Unique 'import' statements
+                      content.split('\n').forEach((line) {
+                        if (line.startsWith('import ') && line.contains('package:')) {
+                          final match = RegExp(r"package:([a-zA-Z0-9_]+)/").firstMatch(line);
+                          if (match != null) {
+                            packages.add(match.group(1)!);
+                          }
+                        }
+                      });
+                    }
                   }
                 });
               }
+              packageCount = packages.length;
 
               // Generate HTML report
               final html = StringBuffer('''
@@ -118,7 +96,7 @@ jobs:
               <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>StyleHub Code Analysis Report</title>
+                <title>StyleHub Code Metrics Report</title>
                 <script src="https://cdn.tailwindcss.com"></script>
                 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
                 <style>
@@ -126,88 +104,45 @@ jobs:
                   .container { max-width: 1200px; margin: 0 auto; padding: 1rem; }
                   .summary { margin-bottom: 1.5rem; }
                   .content { display: flex; gap: 1.5rem; }
-                  .table-container { flex: 1; }
+                  .metrics-container { flex: 1; }
                   .chart-container { width: 300px; height: 300px; }
-                  table { width: 100%; border-collapse: collapse; background-color: white; box-shadow: 0 1px 3px rgba(0,0,0,0.1); }
-                  th, td { padding: 0.75rem; text-align: left; border-bottom: 1px solid #e5e7eb; }
-                  th { background-color: #f3f4f6; font-size: 0.875rem; font-weight: 600; color: #374151; text-transform: uppercase; }
-                  tr:hover { background-color: #f9fafb; }
-                  .severity-icon { margin-right: 0.5rem; }
-                  .error { color: #dc2626; }
-                  .warning { color: #d97706; }
-                  .info { color: #2563eb; }
+                  .summary p { margin: 0.5rem 0; }
                 </style>
               </head>
               <body>
                 <div class="container">
-                  <h1 class="text-2xl font-bold text-gray-800 mb-6">StyleHub Code Analysis Report</h1>
-                  <div class="summary bg-white p-4 rounded-lg shadow">
-                    <p><strong>Total Issues:</strong> ${issues.length}</p>
-                    <p><strong>Total Lines of Code:</strong> $totalLines</p>
-                    <p><strong>Languages Used:</strong> ${languages.keys.join(', ')}</p>
-                  </div>
+                  <h1 class="text-2xl font-bold text-gray-800 mb-6">StyleHub Code Metrics Report</h1>
                   <div class="content">
-                    <div class="table-container">
-                      <table>
-                        <thead>
-                          <tr>
-                            <th>Severity</th>
-                            <th>File</th>
-                            <th>Line</th>
-                            <th>Message</th>
-                            <th>Code</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-              ''');
-
-              if (issues.isNotEmpty) {
-                for (var issue in issues) {
-                  final severity = issue['severity']?.toString().toLowerCase() ?? 'unknown';
-                  final file = issue['location']?['file']?.toString() ?? 'unknown';
-                  final line = issue['location']?['startLine']?.toString() ?? 'unknown';
-                  final message = issue['message']?.toString() ?? 'No message';
-                  final code = issue['code']?.toString() ?? 'unknown';
-                  final icon = severity == 'error' ? '🛑' : severity == 'warning' ? '⚠️' : severity == 'info' ? 'ℹ️' : '';
-                  final severityClass = severity == 'error' ? 'error' : severity == 'warning' ? 'warning' : severity == 'info' ? 'info' : '';
-                  html.writeln('''
-                          <tr>
-                            <td><span class="severity-icon ${severityClass}">${icon}</span>${severity}</td>
-                            <td>${file}</td>
-                            <td>${line}</td>
-                            <td>${message}</td>
-                            <td>${code}</td>
-                          </tr>
-                  ''');
-                }
-              } else {
-                html.writeln('<tr><td colspan="5" class="text-center text-gray-500">No analysis issues found.</td></tr>');
-              }
-
-              html.writeln('''
-                        </tbody>
-                      </table>
+                    <div class="metrics-container">
+                      <div class="summary bg-white p-4 rounded-lg shadow">
+                        <p><strong>Всего строк кода:</strong> $totalLines</p>
+                        <p><strong>Реализовано модулей:</strong> $moduleCount</p>
+                        <p><strong>Подготовлено интерфейсов:</strong> $interfaceCount</p>
+                        <p><strong>Реализовано классов:</strong> $classCount</p>
+                        <p><strong>Реализовано методов:</strong> $methodCount</p>
+                        <p><strong>Использовано виджетов:</strong> $widgetCount</p>
+                        <p><strong>Импортировано пакетов:</strong> $packageCount</p>
+                        <p><strong>Языки:</strong> ${languages.keys.join(', ')}</p>
+                      </div>
                     </div>
                     <div class="chart-container">
-                      <canvas id="issueChart"></canvas>
+                      <canvas id="metricsChart"></canvas>
                       <script>
-                        const ctx = document.getElementById('issueChart').getContext('2d');
+                        const ctx = document.getElementById('metricsChart').getContext('2d');
                         new Chart(ctx, {
                           type: 'pie',
                           data: {
-                            labels: ['Errors', 'Warnings', 'Projects'],
+                            labels: ['Lines', 'Modules', 'Interfaces', 'Classes', 'Methods', 'Widgets', 'Packages'],
                             datasets: [{
-                              data: [${errorCount}, ${warningCount}, ${infoCount}],
-                              backgroundColor: ['#dc2626', '#d97706', '#2563eb'],
-                              borderColor: ['white', 'white', 'white'],
+                              data: [$totalLines, $moduleCount, $interfaceCount, $classCount, $methodCount, $widgetCount, $packageCount],
+                              backgroundColor: ['#2563eb', '#10b981', '#f59e0b', '#dc2626', '#8b5cf6', '#ec4899', '#4b5563'],
+                              borderColor: ['white', 'white', 'white', 'white', 'white', 'white', 'white'],
                               borderWidth: 2
                             }]
                           },
                           options: {
                             plugins: {
-                              legend: {
-                                position: 'bottom'
-                              }
+                              legend: { position: 'bottom', labels: { font: { size: 12 } } }
                             },
                             maintainAspectRatio: true
                           }
@@ -219,18 +154,18 @@ jobs:
               </body>
               </html>
               ''');
-              Directory('analysis').createSync();
-              File('analysis/index.html').writeAsStringSync(html.toString());
+              Directory('analysis-report').createSync();
+              File('analysis-report/index.html').writeAsStringSync(html.toString());
             } catch (e) {
               print('Error generating report: $e');
-              Directory('analysis').createSync();
-              File('analysis/index.html').writeAsStringSync('''
+              Directory('analysis-report').createSync();
+              File('analysis-report/index.html').writeAsStringSync('''
               <!DOCTYPE html>
               <html lang="en">
               <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>StyleHub Code Analysis Report</title>
+                <title>StyleHub Code Metrics Report</title>
                 <script src="https://cdn.tailwindcss.com"></script>
                 <style>
                   body { background-color: #f9fafb; }
@@ -248,9 +183,9 @@ jobs:
           }
           EOF
           dart run generate_report.dart
-          
+
       - name: Upload analysis report
         uses: actions/upload-artifact@v4
         with:
           name: analysis-report
-          path: analysis/
+          path: analysis-report/
